# everybody_codes

./: .gitignore  pyproject.toml  readme.md
The_Kingdom_of_Algorithmia/inputs/: everybody_codes_e2024_q01_p1.txt  everybody_codes_e2024_q01_p2.txt  everybody_codes_e2024_q01_p3.txt  everybody_codes_e2024_q02_p1.txt
The_Kingdom_of_Algorithmia/src/: quest1.ipynb  quest2.ipynb  quest3.ipynb  quest4.ipynb  quest5.ipynb  test_utilities.py  util.py
